--- a/travis.yaml
+++ b/travis.yaml
@@ -6,4 +6,13 @@ elixir:
 env:
   - MIX_ENV=test
 
-script: mix coveralls.travis
+# script:
+#   - mix coveralls.travis
+
+
+script:
+  - mix coveralls.travis
+  - mix do compile --warnings-as-errors, coveralls.json
+
+after_success:
+  - bash <(curl -s https://codecov.io/bash)
