--- a/.travis.yml
+++ b/.travis.yml
@@ -3,14 +3,16 @@ language: elixir
 elixir: 
   - '1.10.3'
 
+otp_release: '23'
+
 env:
   - MIX_ENV=test
 
 # script: mix coveralls.travis
 
-
 script:
-  - MIX_ENV=test mix do compile --warnings-as-errors, coveralls.json
+  - mix coveralls.travis
+  - mix do compile --warnings-as-errors, coveralls.json
 
 after_success:
   - bash <(curl -s https://codecov.io/bash)
