--- a/.travis.yml
+++ b/.travis.yml
@@ -11,8 +11,8 @@ env:
 # script: mix coveralls.travis
 
 script:
-  - mix coveralls.travis
-  - mix do compile --warnings-as-errors, coveralls.json
+  - "mix do deps.get, test && mix compile && mix coveralls.travis"
+  # - mix do compile --warnings-as-errors, coveralls.json
 
 after_success:
   - bash <(curl -s https://codecov.io/bash)
